--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 我的静态网站
 subtitle: 很高兴认识你，我是廖志伟
-welcome_message: <a href="http://139.224.137.74:8080/" target="_blank">去动态网站（未开发完）</a>
+welcome_message: <a href="http://139.224.137.74:8080/" target="_blank">去【动态网站】（未开发完）</a>
 description:
 creator: <a href="http://onev.cat">@onevcat</a>
 
