--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ comment:
 social:
     weibo: onevcat
     github: onevcat
-    twitter: onevcat
+    gitee: onevcat
     gplus: 107108267983477358170
     mail: onev@onevcat.com
 
