--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,8 @@ comment:
 # Social
 social:
     weibo: onevcat
-    github: onevcat
+    githubBoom: onevcat
+    githubjava: onevcat
     gitee: onevcat
     gplus: 107108267983477358170
     mail: onev@onevcat.com
