--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic
-title: 我的静态网站
+title: 廖志伟
 subtitle: 很高兴认识你，我是廖志伟
 welcome_message: <a href="http://139.224.137.74:8080/" target="_blank">去【动态网站】（未开发完）</a>
 description:
@@ -23,7 +23,6 @@ blog_button:
 # Navigation buttons in the front page.
 nav:
     - {title: CSDN（java_wxid）, description: A button, url: 'https://blog.csdn.net/java_wxid?t=1'}
-    - {title: 博客园, description: A button, url: 'https://www.cnblogs.com/javawxid/'}
 
 # Pagination
 plugins: [jekyll-paginate]
