--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Basic
 title: 廖志伟
-subtitle: 很高兴认识你，我是廖志伟
+subtitle: 很高兴认识你
 welcome_message: <a href="http://139.224.137.74:8080/" target="_blank">去【动态网站】（未开发完）</a>
-description:
+description: 这是我的静态网站
 creator: <a href="http://onev.cat">@onevcat</a>
 
 url: "http://vno.onevcat.com"
