--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic
 title: 廖志伟
-subtitle: 很高兴认识你
-welcome_message: <a href="http://139.224.137.74:8080/" target="_blank">去【动态网站】（未开发完）</a>
+subtitle: 看头像觉得我帅不
+welcome_message: 很高兴认识你
 description: 这是我的静态网站
 creator: <a href="http://onev.cat">@onevcat</a>
 
@@ -22,7 +22,8 @@ blog_button:
 
 # Navigation buttons in the front page.
 nav:
-    - {title: CSDN, description: A button, url: 'https://blog.csdn.net/java_wxid?t=1'}
+    - {title: CSDN, description: A button, url: 'https://blog.csdn.net/java_wxid'}
+    - {title: 动态网站, description: A button, url: 'http://139.224.137.74:8080/'}
 
 # Pagination
 plugins: [jekyll-paginate]
